--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -15,6 +15,9 @@
     <form ng-submit="addTodo()">
       <input type="text" ng-model="todoText" size="30" placeholder="add new todo here">
       <input type="submit" value="add">
+	  <div ng-hide="todoTextErrorHide">
+          <span ng-hide="todoTextErrorHide" ng-style="{color:'red'}">{{todoTextErrorMessage}}</span>
+      </div>
     </form>
   </div>
 }
